# petaface

./: .gitignore  README.md  app.py  face_identifier.py  pyproject.toml
backends/: __init__.py  base.py  dlib_backend.py  insightface_backend.py
core/: __init__.py  pipeline.py
